# qdrant-retrieval-demo

./: .gitignore  README.md  livedoor.json  livedoor.py  pyproject.toml  vector.py  vectors-livedoor-ginza.npy
