[tool.poetry]
name = "qdrant-retrieval-demo"
version = "0.1.0"
description = ""
authors = ["Taiki Takabe <takatai.studyhub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
qdrant-client = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
