[tool.poetry]
name = "qdrant-retrieval-demo"
version = "0.1.0"
description = ""
authors = ["Taiki Takabe <takatai.studyhub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
qdrant-client = "^1.9.2"
numpy = "^2.0.0"
pandas = "^2.2.2"
ginza = "^5.2.0"
ja-ginza = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
