[tool.poetry]
name = "qdrant-retrieval-demo"
version = "0.1.0"
description = ""
authors = ["Taiki Takabe <takatai.studyhub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
qdrant-client = "1.9.2"
numpy = "^1.23.5"
pandas = "^2.2.2"
ginza = "^5.2.0"
ja-ginza = "^5.2.0"
chardet = "^5.2.0"
spacy = "^3.7.5"
thinc = "8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
